fix: added field "Verified" to Profile schema
